@@ -140,7 +140,7 @@ module ActiveMerchant #:nodoc:
 
             response = ssl_post(Paypal.service_url + '?cmd=_notify-validate', payload, 
               'Content-Length' => "#{payload.size}",
-              'User-Agent'     => "Active Merchant -- http://home.leetsoft.com/am"
+              'User-Agent'     => "Active Merchant -- http://activemerchant.org"
             )
             
             raise StandardError.new("Faulty paypal result: #{response}") unless ["VERIFIED", "INVALID"].include?(response)
